# seeds-clients

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
docs/: index.md
docs/api/: index.md  types.md
docs/api/providers/: anthropic.md  google.md  openai.md  openrouter.md
docs/api/tracking/: boamps.md  codecarbon.md  ecologits.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: anthropic.md  batch-processing.md  benchmarks.md  caching.md  carbon-tracking.md  google.md  openai.md  openrouter.md
examples/: basic_usage.py  batch_processing.py  carbon_tracking.py  performance_analysis.py  structured_outputs.py
seeds_clients/: __init__.py
seeds_clients/core/: __init__.py  base_client.py  batch.py  cache.py  exceptions.py  types.py
seeds_clients/providers/: __init__.py  anthropic.py  google.py  model_garden.py  openai.py  openrouter.py  pricing.py  pricing_data.json
seeds_clients/tracking/: __init__.py  base.py  boamps_reporter.py  codecarbon_tracker.py  ecologits_tracker.py
seeds_clients/utils/: __init__.py  logging_utils.py  pricing.py  pricing_data.json
tests/: __init__.py  conftest.py  test_anthropic.py  test_base_tracking.py  test_batch.py  test_boamps_reporter.py  test_cache.py  test_codecarbon_tracker.py  test_cumulative_tracking.py  test_ecologits_tracker.py  test_exceptions.py  test_google.py  test_integration.py  test_logging_utils.py  test_model_garden.py  test_no_error_caching.py  test_openai.py  test_openrouter.py  test_pricing.py  test_types.py
