[project]
name = "seeds-clients"
version = "0.1.0"
description = "Unified LLM clients with carbon impact tracking, cost monitoring, and smart caching"
authors = [
    {name = "Leo Keba", email = "leokeba@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["llm", "carbon-tracking", "ai", "sustainability", "ecologits", "openai", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.12",
    "httpx>=0.28",
    "pillow>=12.0",
    "diskcache>=5.6",
    "ecologits>=0.9",
    "python-dotenv>=1.2",
    "google-genai>=1.52.0",
    "anthropic>=0.74.1",
    "openai>=2.8.1",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.8"]
google = ["google-genai>=1.52"]
mistral = ["mistralai>=1.0"]
all-providers = [
    "openai>=1.0",
    "anthropic>=0.8",
    "google-genai>=1.52",
    "mistralai>=1.0",
]
codecarbon = ["codecarbon>=2.0"]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "pytest-asyncio>=1.3",
    "ruff>=0.14",
    "mypy>=1.18",
    "black>=25.0",
    "ipython>=9.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]
all = [
    "seeds-clients[all-providers,codecarbon,dev,docs]"
]

[project.urls]
Homepage = "https://github.com/leokeba/seeds-clients"
Documentation = "https://github.com/leokeba/seeds-clients"
Repository = "https://github.com/leokeba/seeds-clients"
Issues = "https://github.com/leokeba/seeds-clients/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["seeds_clients"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=seeds_clients",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
exclude = [
    "^site/",
    "^htmlcov/",
    "^old/",
    "^tests/",
    "^examples/",
]

[[tool.mypy.overrides]]
module = [
    "diskcache.*",
    "ecologits.*",
    "PIL.*",
    "google.*",
    "google.genai.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']

[tool.pyright]
exclude = [
    "site",
    "htmlcov",
    "old",
    "tests",
    "examples",
]
pythonVersion = "3.11"

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
exclude = [
    "site",
    "htmlcov",
    "old",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "pytest-asyncio>=1.3",
    "ruff>=0.14",
    "mypy>=1.18",
    "ipython>=9.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=1.0.0",
    "ty>=0.0.1a29",
]
